Fixed signature item. Further adjustments to this component aligned with web modifications.

--- a/livingdocs/Signatures/signature-item/_print.scss
+++ b/livingdocs/Signatures/signature-item/_print.scss
@@ -1,8 +1,7 @@
 @use "/src/assets/scss/user-style/variables" as *;
 @use "/src/assets/scss/user-style/mixins" as *;
 .srl-signature-item {
-  margin-bottom: 5pt;
-  gap: 5pt;
+  margin:0 10pt;
   &__name,
   &__position{
     @include font-style-print(text);
