--- a/livingdocs/Signatures/signature-item/general.scss
+++ b/livingdocs/Signatures/signature-item/general.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
   height: 100%;
   box-sizing: border-box;
   &__image {
@@ -13,10 +12,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    img,
     &__img {
-      max-height: 100%;
-      max-width: 70%;
-      object-fit: contain;
+      display:block;
+      max-height:100px;
+      width:auto;
     }
 
   }
